parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    APOSTROPHE
    ARRAY
    AS
    CATCH
    CLONE
    CLOSETAGAL
    CONST
    CONTINUE
    DECLARE
    DIE
    DOT
    EMPTY
    ENDDECLARE
    ENDFOR
    ENDFOREACH
    ENDIF
    ENDSWITCH
    ENDWHILE
    EXIT
    FOREACH
    GLOBAL
    GOTO
    HASHTAG
    IMPLEMENTS
    INCLUDE_ONCE
    INTERFACE
    ISSET
    LIST
    MINUSEQUAL
    NAMESPACE
    PLUSEQUAL
    PRINT
    QUOTES
    THROW
    TRAIT
    TRY
    UNSET
    USE
    VAR
    XOR
    __HALT_COMPILER

Grammar

Rule 0     S' -> program
Rule 1     program -> OPENTAG declaration_list CLOSETAG
Rule 2     declaration_list -> declaration_list declaration
Rule 3     declaration_list -> declaration
Rule 4     declaration -> var_declaration
Rule 5     declaration -> fun_declaration
Rule 6     declaration -> area fun_declaration
Rule 7     declaration -> header_declaration
Rule 8     declaration -> class_declaration
Rule 9     declaration -> echo_stmt
Rule 10    declaration -> selection_stmt
Rule 11    declaration -> iteration_stmt
Rule 12    declaration -> typeclass
Rule 13    declaration -> comments
Rule 14    echo_stmt -> echo_stmt ECHO STRING SEMI
Rule 15    echo_stmt -> echo_stmt ECHO VARIABLE SEMI
Rule 16    echo_stmt -> empty
Rule 17    echo_stmt -> echo_stmt ECHO NUM SEMI
Rule 18    echo_stmt -> echo_stmt ECHO boolean SEMI
Rule 19    echo_stmt -> echo_stmt ECHO fun_declaration SEMI
Rule 20    header_declaration -> REQUIRE LPAREN STRING RPAREN SEMI
Rule 21    header_declaration -> INCLUDE LPAREN STRING RPAREN SEMI
Rule 22    class_declaration -> area CLASS ID LBLOCK attribute RBLOCK
Rule 23    class_declaration -> CLASS ID LBLOCK attribute RBLOCK
Rule 24    class_declaration -> CLASS ID LBLOCK RBLOCK
Rule 25    class_declaration -> CLASS ID EXTENDS ID LBLOCK attribute RBLOCK
Rule 26    class_declaration -> CLASS ID EXTENDS ID LBLOCK RBLOCK
Rule 27    attribute -> attribute area var_declaration
Rule 28    attribute -> area var_declaration
Rule 29    attribute -> attribute area fun_declaration
Rule 30    attribute -> area fun_declaration
Rule 31    comments -> COMMENTS
Rule 32    area -> PRIVATE
Rule 33    area -> PUBLIC
Rule 34    area -> PROTECTED
Rule 35    var_declaration -> VARIABLE SEMI var_declaration
Rule 36    var_declaration -> VARIABLE SEMI
Rule 37    var_declaration -> TIMESTIMES VARIABLE SEMI
Rule 38    var_declaration -> TIMESTIMES VARIABLE SEMI var_declaration
Rule 39    var_declaration -> VARIABLE EQUAL NUM SEMI var_declaration
Rule 40    var_declaration -> VARIABLE EQUAL NUM SEMI
Rule 41    var_declaration -> VARIABLE EQUAL boolean SEMI var_declaration
Rule 42    var_declaration -> VARIABLE EQUAL boolean SEMI
Rule 43    var_declaration -> VARIABLE EQUAL VARIABLE SEMI var_declaration
Rule 44    var_declaration -> VARIABLE EQUAL VARIABLE SEMI
Rule 45    var_declaration -> AMPERSANT VARIABLE SEMI var_declaration
Rule 46    var_declaration -> AMPERSANT VARIABLE EQUAL VARIABLE SEMI selection_stmt
Rule 47    var_declaration -> AMPERSANT VARIABLE SEMI
Rule 48    var_declaration -> VARIABLE EQUAL simple_expression SEMI
Rule 49    fun_declaration -> FUNCTION ID LPAREN params RPAREN
Rule 50    fun_declaration -> FUNCTION ID LPAREN params RPAREN compount_stmt
Rule 51    params -> param_list
Rule 52    params -> empty
Rule 53    param_list -> param_list COMMA param_list
Rule 54    param_list -> param
Rule 55    param -> VARIABLE
Rule 56    param -> VARIABLE LBRACKET RBRACKET
Rule 57    compount_stmt -> LBLOCK echo_stmt local_declarations echo_stmt statement_list echo_stmt RBLOCK
Rule 58    local_declarations -> local_declarations var_declaration
Rule 59    local_declarations -> empty
Rule 60    statement_list -> statement_list statement
Rule 61    statement_list -> empty
Rule 62    statement -> expression_stmt
Rule 63    statement -> compount_stmt
Rule 64    statement -> selection_stmt
Rule 65    statement -> iteration_stmt
Rule 66    statement -> return_stmt
Rule 67    statement -> class_declaration
Rule 68    statement -> echo_stmt
Rule 69    expression_stmt -> expression SEMI
Rule 70    selection_stmt -> IF LPAREN expression RPAREN statement
Rule 71    selection_stmt -> IF LPAREN expression RPAREN statement selection
Rule 72    selection -> ELSE statement
Rule 73    selection -> ELSEIF statement selection
Rule 74    selection_stmt -> SWITCH LPAREN var RPAREN statement
Rule 75    selection_stmt -> CASE NUM COLON statement BREAK SEMI
Rule 76    selection_stmt -> DEFAULT COLON statement BREAK SEMI
Rule 77    iteration_stmt -> FOR LPAREN var_declaration SEMI expression SEMI additive_expression RPAREN statement
Rule 78    iteration_stmt -> WHILE LPAREN expression RPAREN statement
Rule 79    iteration_stmt -> DO LBLOCK statement SEMI RBLOCK WHILE LPAREN expression RPAREN
Rule 80    return_stmt -> RETURN SEMI
Rule 81    return_stmt -> RETURN expression SEMI
Rule 82    expression -> var EQUAL expression
Rule 83    expression -> simple_expression
Rule 84    expression -> var EQUAL AMPERSANT VARIABLE
Rule 85    expression -> expression AND expression
Rule 86    expression -> expression OR expression
Rule 87    var -> VARIABLE
Rule 88    var -> VARIABLE LBRACKET expression RBRACKET
Rule 89    simple_expression -> additive_expression relop additive_expression
Rule 90    simple_expression -> additive_expression
Rule 91    relop -> LESS
Rule 92    relop -> LESSEQUAL
Rule 93    relop -> GREATER
Rule 94    relop -> GREATEREQUAL
Rule 95    relop -> DEQUAL
Rule 96    relop -> DISTINT
Rule 97    relop -> ISEQUAL
Rule 98    additive_expression -> additive_expression addop term
Rule 99    additive_expression -> term
Rule 100   additive_expression -> term MINUSMINUS
Rule 101   additive_expression -> term PLUSPLUS
Rule 102   addop -> PLUS
Rule 103   addop -> MINUS
Rule 104   term -> term mulop factor
Rule 105   term -> factor
Rule 106   mulop -> TIMES
Rule 107   mulop -> DIVIDE
Rule 108   factor -> LPAREN expression RPAREN
Rule 109   factor -> var
Rule 110   factor -> NUM
Rule 111   factor -> boolean
Rule 112   factor -> VARIABLE LPAREN args RPAREN
Rule 113   args -> args_list
Rule 114   args -> empty
Rule 115   args -> VOID
Rule 116   args_list -> args_list COMMA expression
Rule 117   args_list -> expression
Rule 118   boolean -> TRUE
Rule 119   boolean -> FALSE
Rule 120   typeclass -> ID VARIABLE EQUAL NEW constructor SEMI
Rule 121   constructor -> ID LPAREN RPAREN
Rule 122   constructor -> ID LPAREN args RPAREN
Rule 123   empty -> <empty>

Terminals, with rules where they appear

ABSTRACT             : 
AMPERSANT            : 45 46 47 84
AND                  : 85
APOSTROPHE           : 
ARRAY                : 
AS                   : 
BREAK                : 75 76
CASE                 : 75
CATCH                : 
CLASS                : 22 23 24 25 26
CLONE                : 
CLOSETAG             : 1
CLOSETAGAL           : 
COLON                : 75 76
COMMA                : 53 116
COMMENTS             : 31
CONST                : 
CONTINUE             : 
DECLARE              : 
DEFAULT              : 76
DEQUAL               : 95
DIE                  : 
DISTINT              : 96
DIVIDE               : 107
DO                   : 79
DOT                  : 
ECHO                 : 14 15 17 18 19
ELSE                 : 72
ELSEIF               : 73
EMPTY                : 
ENDDECLARE           : 
ENDFOR               : 
ENDFOREACH           : 
ENDIF                : 
ENDSWITCH            : 
ENDWHILE             : 
EQUAL                : 39 40 41 42 43 44 46 48 82 84 120
EXIT                 : 
EXTENDS              : 25 26
FALSE                : 119
FOR                  : 77
FOREACH              : 
FUNCTION             : 49 50
GLOBAL               : 
GOTO                 : 
GREATER              : 93
GREATEREQUAL         : 94
HASHTAG              : 
ID                   : 22 23 24 25 25 26 26 49 50 120 121 122
IF                   : 70 71
IMPLEMENTS           : 
INCLUDE              : 21
INCLUDE_ONCE         : 
INTERFACE            : 
ISEQUAL              : 97
ISSET                : 
LBLOCK               : 22 23 24 25 26 57 79
LBRACKET             : 56 88
LESS                 : 91
LESSEQUAL            : 92
LIST                 : 
LPAREN               : 20 21 49 50 70 71 74 77 78 79 108 112 121 122
MINUS                : 103
MINUSEQUAL           : 
MINUSMINUS           : 100
NAMESPACE            : 
NEW                  : 120
NUM                  : 17 39 40 75 110
OPENTAG              : 1
OR                   : 86
PLUS                 : 102
PLUSEQUAL            : 
PLUSPLUS             : 101
PRINT                : 
PRIVATE              : 32
PROTECTED            : 34
PUBLIC               : 33
QUOTES               : 
RBLOCK               : 22 23 24 25 26 57 79
RBRACKET             : 56 88
REQUIRE              : 20
RETURN               : 80 81
RPAREN               : 20 21 49 50 70 71 74 77 78 79 108 112 121 122
SEMI                 : 14 15 17 18 19 20 21 35 36 37 38 39 40 41 42 43 44 45 46 47 48 69 75 76 77 77 79 80 81 120
STRING               : 14 20 21
SWITCH               : 74
THROW                : 
TIMES                : 106
TIMESTIMES           : 37 38
TRAIT                : 
TRUE                 : 118
TRY                  : 
UNSET                : 
USE                  : 
VAR                  : 
VARIABLE             : 15 35 36 37 38 39 40 41 42 43 43 44 44 45 46 46 47 48 55 56 84 87 88 112 120
VOID                 : 115
WHILE                : 78 79
XOR                  : 
__HALT_COMPILER      : 
error                : 

Nonterminals, with rules where they appear

additive_expression  : 77 89 89 90 98
addop                : 98
area                 : 6 22 27 28 29 30
args                 : 112 122
args_list            : 113 116
attribute            : 22 23 25 27 29
boolean              : 18 41 42 111
class_declaration    : 8 67
comments             : 13
compount_stmt        : 50 63
constructor          : 120
declaration          : 2 3
declaration_list     : 1 2
echo_stmt            : 9 14 15 17 18 19 57 57 57 68
empty                : 16 52 59 61 114
expression           : 69 70 71 77 78 79 81 82 85 85 86 86 88 108 116 117
expression_stmt      : 62
factor               : 104 105
fun_declaration      : 5 6 19 29 30
header_declaration   : 7
iteration_stmt       : 11 65
local_declarations   : 57 58
mulop                : 104
param                : 54
param_list           : 51 53 53
params               : 49 50
program              : 0
relop                : 89
return_stmt          : 66
selection            : 71 73
selection_stmt       : 10 46 64
simple_expression    : 48 83
statement            : 60 70 71 72 73 74 75 76 77 78 79
statement_list       : 57 60
term                 : 98 99 100 101 104
typeclass            : 12
var                  : 74 82 84 109
var_declaration      : 4 27 28 35 38 39 41 43 45 58 77

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . OPENTAG declaration_list CLOSETAG

    OPENTAG         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> OPENTAG . declaration_list CLOSETAG
    (2) declaration_list -> . declaration_list declaration
    (3) declaration_list -> . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (6) declaration -> . area fun_declaration
    (7) declaration -> . header_declaration
    (8) declaration -> . class_declaration
    (9) declaration -> . echo_stmt
    (10) declaration -> . selection_stmt
    (11) declaration -> . iteration_stmt
    (12) declaration -> . typeclass
    (13) declaration -> . comments
    (35) var_declaration -> . VARIABLE SEMI var_declaration
    (36) var_declaration -> . VARIABLE SEMI
    (37) var_declaration -> . TIMESTIMES VARIABLE SEMI
    (38) var_declaration -> . TIMESTIMES VARIABLE SEMI var_declaration
    (39) var_declaration -> . VARIABLE EQUAL NUM SEMI var_declaration
    (40) var_declaration -> . VARIABLE EQUAL NUM SEMI
    (41) var_declaration -> . VARIABLE EQUAL boolean SEMI var_declaration
    (42) var_declaration -> . VARIABLE EQUAL boolean SEMI
    (43) var_declaration -> . VARIABLE EQUAL VARIABLE SEMI var_declaration
    (44) var_declaration -> . VARIABLE EQUAL VARIABLE SEMI
    (45) var_declaration -> . AMPERSANT VARIABLE SEMI var_declaration
    (46) var_declaration -> . AMPERSANT VARIABLE EQUAL VARIABLE SEMI selection_stmt
    (47) var_declaration -> . AMPERSANT VARIABLE SEMI
    (48) var_declaration -> . VARIABLE EQUAL simple_expression SEMI
    (49) fun_declaration -> . FUNCTION ID LPAREN params RPAREN
    (50) fun_declaration -> . FUNCTION ID LPAREN params RPAREN compount_stmt
    (32) area -> . PRIVATE
    (33) area -> . PUBLIC
    (34) area -> . PROTECTED
    (20) header_declaration -> . REQUIRE LPAREN STRING RPAREN SEMI
    (21) header_declaration -> . INCLUDE LPAREN STRING RPAREN SEMI
    (22) class_declaration -> . area CLASS ID LBLOCK attribute RBLOCK
    (23) class_declaration -> . CLASS ID LBLOCK attribute RBLOCK
    (24) class_declaration -> . CLASS ID LBLOCK RBLOCK
    (25) class_declaration -> . CLASS ID EXTENDS ID LBLOCK attribute RBLOCK
    (26) class_declaration -> . CLASS ID EXTENDS ID LBLOCK RBLOCK
    (14) echo_stmt -> . echo_stmt ECHO STRING SEMI
    (15) echo_stmt -> . echo_stmt ECHO VARIABLE SEMI
    (16) echo_stmt -> . empty
    (17) echo_stmt -> . echo_stmt ECHO NUM SEMI
    (18) echo_stmt -> . echo_stmt ECHO boolean SEMI
    (19) echo_stmt -> . echo_stmt ECHO fun_declaration SEMI
    (70) selection_stmt -> . IF LPAREN expression RPAREN statement
    (71) selection_stmt -> . IF LPAREN expression RPAREN statement selection
    (74) selection_stmt -> . SWITCH LPAREN var RPAREN statement
    (75) selection_stmt -> . CASE NUM COLON statement BREAK SEMI
    (76) selection_stmt -> . DEFAULT COLON statement BREAK SEMI
    (77) iteration_stmt -> . FOR LPAREN var_declaration SEMI expression SEMI additive_expression RPAREN statement
    (78) iteration_stmt -> . WHILE LPAREN expression RPAREN statement
    (79) iteration_stmt -> . DO LBLOCK statement SEMI RBLOCK WHILE LPAREN expression RPAREN
    (120) typeclass -> . ID VARIABLE EQUAL NEW constructor SEMI
    (31) comments -> . COMMENTS
    (123) empty -> .

  ! shift/reduce conflict for VARIABLE resolved as shift
  ! shift/reduce conflict for TIMESTIMES resolved as shift
  ! shift/reduce conflict for AMPERSANT resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for PRIVATE resolved as shift
  ! shift/reduce conflict for PUBLIC resolved as shift
  ! shift/reduce conflict for PROTECTED resolved as shift
  ! shift/reduce conflict for REQUIRE resolved as shift
  ! shift/reduce conflict for INCLUDE resolved as shift
  ! shift/reduce conflict for CLASS resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for SWITCH resolved as shift
  ! shift/reduce conflict for CASE resolved as shift
  ! shift/reduce conflict for DEFAULT resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for COMMENTS resolved as shift
    VARIABLE        shift and go to state 15
    TIMESTIMES      shift and go to state 16
    AMPERSANT       shift and go to state 17
    FUNCTION        shift and go to state 18
    PRIVATE         shift and go to state 20
    PUBLIC          shift and go to state 21
    PROTECTED       shift and go to state 22
    REQUIRE         shift and go to state 23
    INCLUDE         shift and go to state 24
    CLASS           shift and go to state 25
    IF              shift and go to state 27
    SWITCH          shift and go to state 28
    CASE            shift and go to state 29
    DEFAULT         shift and go to state 30
    FOR             shift and go to state 31
    WHILE           shift and go to state 32
    DO              shift and go to state 33
    ID              shift and go to state 19
    COMMENTS        shift and go to state 34
    ECHO            reduce using rule 123 (empty -> .)
    CLOSETAG        reduce using rule 123 (empty -> .)

  ! VARIABLE        [ reduce using rule 123 (empty -> .) ]
  ! TIMESTIMES      [ reduce using rule 123 (empty -> .) ]
  ! AMPERSANT       [ reduce using rule 123 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 123 (empty -> .) ]
  ! PRIVATE         [ reduce using rule 123 (empty -> .) ]
  ! PUBLIC          [ reduce using rule 123 (empty -> .) ]
  ! PROTECTED       [ reduce using rule 123 (empty -> .) ]
  ! REQUIRE         [ reduce using rule 123 (empty -> .) ]
  ! INCLUDE         [ reduce using rule 123 (empty -> .) ]
  ! CLASS           [ reduce using rule 123 (empty -> .) ]
  ! IF              [ reduce using rule 123 (empty -> .) ]
  ! SWITCH          [ reduce using rule 123 (empty -> .) ]
  ! CASE            [ reduce using rule 123 (empty -> .) ]
  ! DEFAULT         [ reduce using rule 123 (empty -> .) ]
  ! FOR             [ reduce using rule 123 (empty -> .) ]
  ! WHILE           [ reduce using rule 123 (empty -> .) ]
  ! DO              [ reduce using rule 123 (empty -> .) ]
  ! ID              [ reduce using rule 123 (empty -> .) ]
  ! COMMENTS        [ reduce using rule 123 (empty -> .) ]

    declaration_list               shift and go to state 3
    declaration                    shift and go to state 4
    var_declaration                shift and go to state 5
    fun_declaration                shift and go to state 6
    area                           shift and go to state 7
    header_declaration             shift and go to state 8
    class_declaration              shift and go to state 9
    echo_stmt                      shift and go to state 10
    selection_stmt                 shift and go to state 11
    iteration_stmt                 shift and go to state 12
    typeclass                      shift and go to state 13
    comments                       shift and go to state 14
    empty                          shift and go to state 26

state 3

    (1) program -> OPENTAG declaration_list . CLOSETAG
    (2) declaration_list -> declaration_list . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (6) declaration -> . area fun_declaration
    (7) declaration -> . header_declaration
    (8) declaration -> . class_declaration
    (9) declaration -> . echo_stmt
    (10) declaration -> . selection_stmt
    (11) declaration -> . iteration_stmt
    (12) declaration -> . typeclass
    (13) declaration -> . comments
    (35) var_declaration -> . VARIABLE SEMI var_declaration
    (36) var_declaration -> . VARIABLE SEMI
    (37) var_declaration -> . TIMESTIMES VARIABLE SEMI
    (38) var_declaration -> . TIMESTIMES VARIABLE SEMI var_declaration
    (39) var_declaration -> . VARIABLE EQUAL NUM SEMI var_declaration
    (40) var_declaration -> . VARIABLE EQUAL NUM SEMI
    (41) var_declaration -> . VARIABLE EQUAL boolean SEMI var_declaration
    (42) var_declaration -> . VARIABLE EQUAL boolean SEMI
    (43) var_declaration -> . VARIABLE EQUAL VARIABLE SEMI var_declaration
    (44) var_declaration -> . VARIABLE EQUAL VARIABLE SEMI
    (45) var_declaration -> . AMPERSANT VARIABLE SEMI var_declaration
    (46) var_declaration -> . AMPERSANT VARIABLE EQUAL VARIABLE SEMI selection_stmt
    (47) var_declaration -> . AMPERSANT VARIABLE SEMI
    (48) var_declaration -> . VARIABLE EQUAL simple_expression SEMI
    (49) fun_declaration -> . FUNCTION ID LPAREN params RPAREN
    (50) fun_declaration -> . FUNCTION ID LPAREN params RPAREN compount_stmt
    (32) area -> . PRIVATE
    (33) area -> . PUBLIC
    (34) area -> . PROTECTED
    (20) header_declaration -> . REQUIRE LPAREN STRING RPAREN SEMI
    (21) header_declaration -> . INCLUDE LPAREN STRING RPAREN SEMI
    (22) class_declaration -> . area CLASS ID LBLOCK attribute RBLOCK
    (23) class_declaration -> . CLASS ID LBLOCK attribute RBLOCK
    (24) class_declaration -> . CLASS ID LBLOCK RBLOCK
    (25) class_declaration -> . CLASS ID EXTENDS ID LBLOCK attribute RBLOCK
    (26) class_declaration -> . CLASS ID EXTENDS ID LBLOCK RBLOCK
    (14) echo_stmt -> . echo_stmt ECHO STRING SEMI
    (15) echo_stmt -> . echo_stmt ECHO VARIABLE SEMI
    (16) echo_stmt -> . empty
    (17) echo_stmt -> . echo_stmt ECHO NUM SEMI
    (18) echo_stmt -> . echo_stmt ECHO boolean SEMI
    (19) echo_stmt -> . echo_stmt ECHO fun_declaration SEMI
    (70) selection_stmt -> . IF LPAREN expression RPAREN statement
    (71) selection_stmt -> . IF LPAREN expression RPAREN statement selection
    (74) selection_stmt -> . SWITCH LPAREN var RPAREN statement
    (75) selection_stmt -> . CASE NUM COLON statement BREAK SEMI
    (76) selection_stmt -> . DEFAULT COLON statement BREAK SEMI
    (77) iteration_stmt -> . FOR LPAREN var_declaration SEMI expression SEMI additive_expression RPAREN statement
    (78) iteration_stmt -> . WHILE LPAREN expression RPAREN statement
    (79) iteration_stmt -> . DO LBLOCK statement SEMI RBLOCK WHILE LPAREN expression RPAREN
    (120) typeclass -> . ID VARIABLE EQUAL NEW constructor SEMI
    (31) comments -> . COMMENTS
    (123) empty -> .

  ! shift/reduce conflict for CLOSETAG resolved as shift
  ! shift/reduce conflict for VARIABLE resolved as shift
  ! shift/reduce conflict for TIMESTIMES resolved as shift
  ! shift/reduce conflict for AMPERSANT resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for PRIVATE resolved as shift
  ! shift/reduce conflict for PUBLIC resolved as shift
  ! shift/reduce conflict for PROTECTED resolved as shift
  ! shift/reduce conflict for REQUIRE resolved as shift
  ! shift/reduce conflict for INCLUDE resolved as shift
  ! shift/reduce conflict for CLASS resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for SWITCH resolved as shift
  ! shift/reduce conflict for CASE resolved as shift
  ! shift/reduce conflict for DEFAULT resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for COMMENTS resolved as shift
    CLOSETAG        shift and go to state 35
    VARIABLE        shift and go to state 15
    TIMESTIMES      shift and go to state 16
    AMPERSANT       shift and go to state 17
    FUNCTION        shift and go to state 18
    PRIVATE         shift and go to state 20
    PUBLIC          shift and go to state 21
    PROTECTED       shift and go to state 22
    REQUIRE         shift and go to state 23
    INCLUDE         shift and go to state 24
    CLASS           shift and go to state 25
    IF              shift and go to state 27
    SWITCH          shift and go to state 28
    CASE            shift and go to state 29
    DEFAULT         shift and go to state 30
    FOR             shift and go to state 31
    WHILE           shift and go to state 32
    DO              shift and go to state 33
    ID              shift and go to state 19
    COMMENTS        shift and go to state 34
    ECHO            reduce using rule 123 (empty -> .)

  ! CLOSETAG        [ reduce using rule 123 (empty -> .) ]
  ! VARIABLE        [ reduce using rule 123 (empty -> .) ]
  ! TIMESTIMES      [ reduce using rule 123 (empty -> .) ]
  ! AMPERSANT       [ reduce using rule 123 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 123 (empty -> .) ]
  ! PRIVATE         [ reduce using rule 123 (empty -> .) ]
  ! PUBLIC          [ reduce using rule 123 (empty -> .) ]
  ! PROTECTED       [ reduce using rule 123 (empty -> .) ]
  ! REQUIRE         [ reduce using rule 123 (empty -> .) ]
  ! INCLUDE         [ reduce using rule 123 (empty -> .) ]
  ! CLASS           [ reduce using rule 123 (empty -> .) ]
  ! IF              [ reduce using rule 123 (empty -> .) ]
  ! SWITCH          [ reduce using rule 123 (empty -> .) ]
  ! CASE            [ reduce using rule 123 (empty -> .) ]
  ! DEFAULT         [ reduce using rule 123 (empty -> .) ]
  ! FOR             [ reduce using rule 123 (empty -> .) ]
  ! WHILE           [ reduce using rule 123 (empty -> .) ]
  ! DO              [ reduce using rule 123 (empty -> .) ]
  ! ID              [ reduce using rule 123 (empty -> .) ]
  ! COMMENTS        [ reduce using rule 123 (empty -> .) ]

    declaration                    shift and go to state 36
    var_declaration                shift and go to state 5
    fun_declaration                shift and go to state 6
    area                           shift and go to state 7
    header_declaration             shift and go to state 8
    class_declaration              shift and go to state 9
    echo_stmt                      shift and go to state 10
    selection_stmt                 shift and go to state 11
    iteration_stmt                 shift and go to state 12
    typeclass                      shift and go to state 13
    comments                       shift and go to state 14
    empty                          shift and go to state 26

state 4

    (3) declaration_list -> declaration .

    CLOSETAG        reduce using rule 3 (declaration_list -> declaration .)
    VARIABLE        reduce using rule 3 (declaration_list -> declaration .)
    TIMESTIMES      reduce using rule 3 (declaration_list -> declaration .)
    AMPERSANT       reduce using rule 3 (declaration_list -> declaration .)
    FUNCTION        reduce using rule 3 (declaration_list -> declaration .)
    PRIVATE         reduce using rule 3 (declaration_list -> declaration .)
    PUBLIC          reduce using rule 3 (declaration_list -> declaration .)
    PROTECTED       reduce using rule 3 (declaration_list -> declaration .)
    REQUIRE         reduce using rule 3 (declaration_list -> declaration .)
    INCLUDE         reduce using rule 3 (declaration_list -> declaration .)
    CLASS           reduce using rule 3 (declaration_list -> declaration .)
    IF              reduce using rule 3 (declaration_list -> declaration .)
    SWITCH          reduce using rule 3 (declaration_list -> declaration .)
    CASE            reduce using rule 3 (declaration_list -> declaration .)
    DEFAULT         reduce using rule 3 (declaration_list -> declaration .)
    FOR             reduce using rule 3 (declaration_list -> declaration .)
    WHILE           reduce using rule 3 (declaration_list -> declaration .)
    DO              reduce using rule 3 (declaration_list -> declaration .)
    ID              reduce using rule 3 (declaration_list -> declaration .)
    COMMENTS        reduce using rule 3 (declaration_list -> declaration .)
    ECHO            reduce using rule 3 (declaration_list -> declaration .)


state 5

    (4) declaration -> var_declaration .

    CLOSETAG        reduce using rule 4 (declaration -> var_declaration .)
    VARIABLE        reduce using rule 4 (declaration -> var_declaration .)
    TIMESTIMES      reduce using rule 4 (declaration -> var_declaration .)
    AMPERSANT       reduce using rule 4 (declaration -> var_declaration .)
    FUNCTION        reduce using rule 4 (declaration -> var_declaration .)
    PRIVATE         reduce using rule 4 (declaration -> var_declaration .)
    PUBLIC          reduce using rule 4 (declaration -> var_declaration .)
    PROTECTED       reduce using rule 4 (declaration -> var_declaration .)
    REQUIRE         reduce using rule 4 (declaration -> var_declaration .)
    INCLUDE         reduce using rule 4 (declaration -> var_declaration .)
    CLASS           reduce using rule 4 (declaration -> var_declaration .)
    IF              reduce using rule 4 (declaration -> var_declaration .)
    SWITCH          reduce using rule 4 (declaration -> var_declaration .)
    CASE            reduce using rule 4 (declaration -> var_declaration .)
    DEFAULT         reduce using rule 4 (declaration -> var_declaration .)
    FOR             reduce using rule 4 (declaration -> var_declaration .)
    WHILE           reduce using rule 4 (declaration -> var_declaration .)
    DO              reduce using rule 4 (declaration -> var_declaration .)
    ID              reduce using rule 4 (declaration -> var_declaration .)
    COMMENTS        reduce using rule 4 (declaration -> var_declaration .)
    ECHO            reduce using rule 4 (declaration -> var_declaration .)


state 6

    (5) declaration -> fun_declaration .

    CLOSETAG        reduce using rule 5 (declaration -> fun_declaration .)
    VARIABLE        reduce using rule 5 (declaration -> fun_declaration .)
    TIMESTIMES      reduce using rule 5 (declaration -> fun_declaration .)
    AMPERSANT       reduce using rule 5 (declaration -> fun_declaration .)
    FUNCTION        reduce using rule 5 (declaration -> fun_declaration .)
    PRIVATE         reduce using rule 5 (declaration -> fun_declaration .)
    PUBLIC          reduce using rule 5 (declaration -> fun_declaration .)
    PROTECTED       reduce using rule 5 (declaration -> fun_declaration .)
    REQUIRE         reduce using rule 5 (declaration -> fun_declaration .)
    INCLUDE         reduce using rule 5 (declaration -> fun_declaration .)
    CLASS           reduce using rule 5 (declaration -> fun_declaration .)
    IF              reduce using rule 5 (declaration -> fun_declaration .)
    SWITCH          reduce using rule 5 (declaration -> fun_declaration .)
    CASE            reduce using rule 5 (declaration -> fun_declaration .)
    DEFAULT         reduce using rule 5 (declaration -> fun_declaration .)
    FOR             reduce using rule 5 (declaration -> fun_declaration .)
    WHILE           reduce using rule 5 (declaration -> fun_declaration .)
    DO              reduce using rule 5 (declaration -> fun_declaration .)
    ID              reduce using rule 5 (declaration -> fun_declaration .)
    COMMENTS        reduce using rule 5 (declaration -> fun_declaration .)
    ECHO            reduce using rule 5 (declaration -> fun_declaration .)


state 7

    (6) declaration -> area . fun_declaration
    (22) class_declaration -> area . CLASS ID LBLOCK attribute RBLOCK
    (49) fun_declaration -> . FUNCTION ID LPAREN params RPAREN
    (50) fun_declaration -> . FUNCTION ID LPAREN params RPAREN compount_stmt

    CLASS           shift and go to state 38
    FUNCTION        shift and go to state 18

    fun_declaration                shift and go to state 37

state 8

    (7) declaration -> header_declaration .

    CLOSETAG        reduce using rule 7 (declaration -> header_declaration .)
    VARIABLE        reduce using rule 7 (declaration -> header_declaration .)
    TIMESTIMES      reduce using rule 7 (declaration -> header_declaration .)
    AMPERSANT       reduce using rule 7 (declaration -> header_declaration .)
    FUNCTION        reduce using rule 7 (declaration -> header_declaration .)
    PRIVATE         reduce using rule 7 (declaration -> header_declaration .)
    PUBLIC          reduce using rule 7 (declaration -> header_declaration .)
    PROTECTED       reduce using rule 7 (declaration -> header_declaration .)
    REQUIRE         reduce using rule 7 (declaration -> header_declaration .)
    INCLUDE         reduce using rule 7 (declaration -> header_declaration .)
    CLASS           reduce using rule 7 (declaration -> header_declaration .)
    IF              reduce using rule 7 (declaration -> header_declaration .)
    SWITCH          reduce using rule 7 (declaration -> header_declaration .)
    CASE            reduce using rule 7 (declaration -> header_declaration .)
    DEFAULT         reduce using rule 7 (declaration -> header_declaration .)
    FOR             reduce using rule 7 (declaration -> header_declaration .)
    WHILE           reduce using rule 7 (declaration -> header_declaration .)
    DO              reduce using rule 7 (declaration -> header_declaration .)
    ID              reduce using rule 7 (declaration -> header_declaration .)
    COMMENTS        reduce using rule 7 (declaration -> header_declaration .)
    ECHO            reduce using rule 7 (declaration -> header_declaration .)


state 9

    (8) declaration -> class_declaration .
